--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,9 @@ repositories {
 }
 
 dependencies {
-    compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.firebase:firebase-client-android:2.3.1'
+    compile 'com.android.support:design:23.0.1'
 }
